docs/envoy/v1.36.10/_sources/api-v3/config/core/v3/substitution_format_string.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/core/v3/substitution_format_string.proto:

Substitution format string (proto)
==================================






.. _envoy_v3_api_msg_config.core.v3.JsonFormatOptions:

config.core.v3.JsonFormatOptions
--------------------------------


:repo:`[config.core.v3.JsonFormatOptions proto] <api/envoy/config/core/v3/substitution_format_string.proto#L22>`

Optional configuration options to be used with json_format.



.. code-block:: json
  :force:

  {
    "sort_properties": ...
  }

.. _envoy_v3_api_field_config.core.v3.JsonFormatOptions.sort_properties:


sort_properties
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The output JSON string properties will be sorted.

  .. note::
    As the properties are always sorted, this option has no effect and is deprecated.




.. _envoy_v3_api_msg_config.core.v3.SubstitutionFormatString:

config.core.v3.SubstitutionFormatString
---------------------------------------


:repo:`[config.core.v3.SubstitutionFormatString proto] <api/envoy/config/core/v3/substitution_format_string.proto#L35>`

Configuration to use multiple :ref:`command operators <config_access_log_command_operators>`
to generate a new string in either plain text or JSON format.



.. code-block:: json
  :force:

  {
    "text_format": ...,
    "json_format": {...},
    "text_format_source": {...},
    "omit_empty_values": ...,
    "content_type": ...,
    "formatters": [],
    "json_format_options": {...}
  }

.. _envoy_v3_api_field_config.core.v3.SubstitutionFormatString.text_format:


text_format
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Specify a format with command operators to form a text string.
  Its details is described in :ref:`format string<config_access_log_format_strings>`.

  For example, setting ``text_format`` like below,

  .. validated-code-block:: yaml
    :type-name: envoy.config.core.v3.SubstitutionFormatString

    text_format: "%LOCAL_REPLY_BODY%:%RESPONSE_CODE%:path=%REQ(:path)%\n"

  generates plain text similar to:

  .. code-block:: text

    upstream connect error:503:path=/foo

  Deprecated in favor of :ref:`text_format_source <envoy_v3_api_field_config.core.v3.SubstitutionFormatString.text_format_source>`. To migrate text format strings, use the :ref:`inline_string <envoy_v3_api_field_config.core.v3.DataSource.inline_string>` field.


  

  Precisely one of :ref:`text_format <envoy_v3_api_field_config.core.v3.SubstitutionFormatString.text_format>`, :ref:`json_format <envoy_v3_api_field_config.core.v3.SubstitutionFormatString.json_format>`, :ref:`text_format_source <envoy_v3_api_field_config.core.v3.SubstitutionFormatString.text_format_source>` must be set.

.. _envoy_v3_api_field_config.core.v3.SubstitutionFormatString.json_format:


json_format
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) Specify a format with command operators to form a JSON string.
  Its details is described in :ref:`format dictionary<config_access_log_format_dictionaries>`.
  Values are rendered as strings, numbers, or boolean values as appropriate.
  Nested JSON objects may be produced by some command operators (e.g. FILTER_STATE or DYNAMIC_METADATA).
  See the documentation for a specific command operator for details.

  .. validated-code-block:: yaml
    :type-name: envoy.config.core.v3.SubstitutionFormatString

    json_format:
      status: "%RESPONSE_CODE%"
      message: "%LOCAL_REPLY_BODY%"

  The following JSON object would be created:

  .. code-block:: json

   {
     "status": 500,
     "message": "My error message"
   }



  

  Precisely one of :ref:`text_format <envoy_v3_api_field_config.core.v3.SubstitutionFormatString.text_format>`, :ref:`json_format <envoy_v3_api_field_config.core.v3.SubstitutionFormatString.json_format>`, :ref:`text_format_source <envoy_v3_api_field_config.core.v3.SubstitutionFormatString.text_format_source>` must be set.

.. _envoy_v3_api_field_config.core.v3.SubstitutionFormatString.text_format_source:


text_format_source
  (:ref:`config.core.v3.DataSource <envoy_v3_api_msg_config.core.v3.DataSource>`) Specify a format with command operators to form a text string.
  Its details is described in :ref:`format string<config_access_log_format_strings>`.

  For example, setting ``text_format`` like below,

  .. validated-code-block:: yaml
    :type-name: envoy.config.core.v3.SubstitutionFormatString

    text_format_source:
      inline_string: "%LOCAL_REPLY_BODY%:%RESPONSE_CODE%:path=%REQ(:path)%\n"

  generates plain text similar to:

  .. code-block:: text

    upstream connect error:503:path=/foo



  

  Precisely one of :ref:`text_format <envoy_v3_api_field_config.core.v3.SubstitutionFormatString.text_format>`, :ref:`json_format <envoy_v3_api_field_config.core.v3.SubstitutionFormatString.json_format>`, :ref:`text_format_source <envoy_v3_api_field_config.core.v3.SubstitutionFormatString.text_format_source>` must be set.

.. _envoy_v3_api_field_config.core.v3.SubstitutionFormatString.omit_empty_values:


omit_empty_values
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set to true, when command operators are evaluated to null,

  * for ``text_format``, the output of the empty operator is changed from ``-`` to an
    empty string, so that empty values are omitted entirely.
  * for ``json_format`` the keys with null values are omitted in the output structure.

  .. note::
    This option does not work perfectly with ``json_format`` as keys with ``null`` values
    will still be included in the output. See https://github.com/envoyproxy/envoy/issues/37941
    for more details.



.. _envoy_v3_api_field_config.core.v3.SubstitutionFormatString.content_type:


content_type
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Specify a ``content_type`` field.
  If this field is not set then ``text/plain`` is used for ``text_format`` and
  ``application/json`` is used for ``json_format``.

  .. validated-code-block:: yaml
    :type-name: envoy.config.core.v3.SubstitutionFormatString

    content_type: "text/html; charset=UTF-8"



.. _envoy_v3_api_field_config.core.v3.SubstitutionFormatString.formatters:


formatters
  (**repeated** :ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`) Specifies a collection of Formatter plugins that can be called from the access log configuration.
  See the formatters extensions documentation for details.


  .. _extension_category_envoy.formatter:

  .. tip::

    This extension category has the following known extensions:


    - :ref:`envoy.formatter.cel <extension_envoy.formatter.cel>`

    - :ref:`envoy.formatter.metadata <extension_envoy.formatter.metadata>`

    - :ref:`envoy.formatter.req_without_query <extension_envoy.formatter.req_without_query>`





.. _envoy_v3_api_field_config.core.v3.SubstitutionFormatString.json_format_options:


json_format_options
  (:ref:`config.core.v3.JsonFormatOptions <envoy_v3_api_msg_config.core.v3.JsonFormatOptions>`) If json_format is used, the options will be applied to the output JSON string.


